# caffe_test

./: .gitignore  .gitignore.orig  .travis.yml.orig  .ycm_extra_conf.py  CMakeLists.txt  CMakeLists.txt.orig  LICENSE.orig  Makefile.config.example.orig  Makefile.orig  casia_face.prototxt  other_net.prototxt  run_triplet_training.sh  run_triplet_training_v2.sh
.zcache/: DEBS_installed
cmake/: ConfigGen.cmake.orig  Dependencies.cmake.orig  Misc.cmake.orig  ProtoBuf.cmake.orig  Summary.cmake.orig  Targets.cmake.orig  Utils.cmake.orig  lint.cmake.orig
cmake/Modules/: FindGFlags.cmake.orig  FindGlog.cmake.orig
cmake/Templates/: CaffeConfig.cmake.in.orig  CaffeConfigVersion.cmake.in.orig
docs/: development.md.orig  install_apt.md.orig  install_osx.md.orig  install_yum.md.orig  installation.md.orig  performance_hardware.md.orig
docs/tutorial/: data.md.orig  interfaces.md.orig  layers.md.orig  loss.md.orig  net_layer_blob.md.orig
examples/: detection.ipynb.orig  net_surgery.ipynb.orig
examples/cifar10/: readme.md.orig  train_full.sh.orig  train_quick.sh.orig
examples/feature_extraction/: readme.md.orig
examples/finetune_flickr_style/: assemble_data.py.orig
examples/hdf5_classification/: solver.prototxt.orig  train_val.prototxt.orig
examples/imagenet/: readme.md.orig  resume_training.sh.orig
examples/mnist/: convert_mnist_data.cpp.orig  create_mnist.sh.orig  readme.md.orig
examples/siamese/: mnist_siamese.ipynb.orig  readme.md.orig
examples/web_demo/: app.py.orig
include/caffe/: blob.hpp.orig  common.hpp.orig  common_layers.hpp  common_layers.hpp.orig  data_layers.hpp.orig  data_transformer.hpp.orig  filler.hpp.orig  layer.hpp.orig  loss_layers.hpp  loss_layers.hpp.orig  net.hpp.orig  neuron_layers.hpp.orig  python_layer.hpp.orig  solver.hpp.orig  vision_layers.hpp.orig
include/caffe/test/: test_caffe_main.hpp.orig  test_gradient_check_util.hpp.orig
include/caffe/util/: db.hpp.orig  io.hpp.orig  math_functions.hpp.orig  mkl_alternate.hpp.orig
matlab/: CMakeLists.txt.orig
python/: draw_net.py  draw_net.py.orig  requirements.txt.orig
python/caffe/: __init__.py.orig  _caffe.cpp.orig  classifier.py.orig  detector.py.orig  draw.py.orig  io.py.orig  pycaffe.py.orig
python/caffe/test/: test_net.py.orig  test_python_layer.py.orig  test_solver.py.orig
scripts/travis/: travis_build_and_test.sh.orig  travis_install.sh.orig  travis_setup_makefile_config.sh.orig
src/caffe/: blob.cpp.orig  data_transformer.cpp.orig  layer_factory.cpp.orig  net.cpp  net.cpp.orig  solver.cpp.orig
src/caffe/layers/: absval_layer.cu.orig  base_data_layer.cpp.orig  base_data_layer.cu.orig  bn_layer.cpp  concat_layer.cu.orig  contrastive_loss_layer.cpp.orig  contrastive_loss_layer.cu.orig  conv_layer.cpp.orig  conv_layer.cu.orig  cudnn_conv_layer.cu.orig  data_layer.cpp.orig  deconv_layer.cpp.orig  deconv_layer.cu.orig  flatten_layer.cpp.orig  grn_layer.cpp  grn_layer.cu  hdf5_data_layer.cpp.orig  hdf5_output_layer.cpp.orig  hdf5_output_layer.cu.orig  image_data_layer.cpp.orig  inner_product_layer.cpp.orig  inner_product_layer.cu.orig  lrn_layer.cu.orig  memory_data_layer.cpp  mvn_layer.cpp.orig  mvn_layer.cu.orig  pooling_layer.cu.orig  prelu_layer.cpp.orig  prelu_layer.cu.orig  sigmoid_cross_entropy_loss_layer.cpp.orig  sigmoid_cross_entropy_loss_layer.cu.orig  slice_layer.cu.orig  triplet_loss_layer.cpp  triplet_loss_layer.cu
src/caffe/proto/: caffe.proto  caffe.proto.orig
src/caffe/test/: test_accuracy_layer.cpp.orig  (+18 more)
tools/: caffe.cpp.orig  extract_features.cpp.orig
tools/extra/: parse_log.py.orig  plot_log.gnuplot.example.orig
yuanyang/car_type/: leveldb_test  leveldb_train
yuanyang/classify_char_image/: char_PCI_solver.prototxt  finetuning_train_val.prototxt  test  train  train_val_backup.prototxt
yuanyang/cnn_master/: CMakeLists.txt  cnn_master.cpp  cnn_master.hpp  deploy.prototxt  deploy_car.prototxt  deploy_license.prototxt  deploy_license_2.prototxt  face_deploy.prototxt  main.cpp  main_compare_face.cpp  main_extract_feature_demo.cpp  main_extract_feature_root_folder.cpp  main_generate_triplet.cpp  main_joint_bayesian_test.cpp  main_l2norm_test.cpp  main_make_testsample.cpp  main_one.cpp  main_test_car.cpp  main_test_license.cpp  matdb.cpp  matdb.h  misc.cpp  misc.hpp  yunc_feature.prototxt
yuanyang/cnn_master/.zcache/: DEBS_avail
yuanyang/cnn_off_shell/: CMakeLists.txt  cnn_feature_extractor.cpp  cnn_feature_extractor.hpp  cnn_master.cpp  cnn_master.hpp  main.cpp  opencv_warpper_libsvm.cpp  opencv_warpper_libsvm.h  test_demo.cpp
yuanyang/create_leveldb_dataset/: CMakeLists.txt  yy_build_leveldb.cpp  yy_create_pair_data.cpp  yy_show_leveldb.cpp  yy_split_leveldb.cpp
yuanyang/face_verfiry/: diaosi_db  leveldb_test  leveldb_train  train_level_db  triplet_train
yuanyang/fine_tuning_car/: CMakeLists.txt  cnn_feature_extractor.cpp  deploy.prototxt  prepare_data.cpp  solver.prototxt  test_on_fly.cpp  train_val.prototxt
yuanyang/license_char_classify/: leveldb_test  leveldb_train  license_char_solver_deeper.prototxt  license_char_solver_small.prototxt  small_train_val.prototxt  train_val_deeper.prototxt
yuanyang/wine_labels/: deploy_car.prototxt  deploy_wine.prototxt  leveldb_test  leveldb_train  solver.prototxt  train_val.prototxt
(+70 files in other folders)
